CHANGES
=======

* Add results pagination and add result support
* Add get runs support with pagination

0.0.13
------

* Handle 429 status codes in API responses
* Add support for results get by test ID

0.0.12
------

* Fix version lookup string

0.0.11
------

* Add caching controls and documentation
* Add client side caching
* Add run add-close-delete-update support

0.0.10
------

* Add run support
* Update tests\_get.py
* Add additional examples
* Update README.rst
* Update README.rst
* Fix example name

0.0.9
-----

* Add Config and ConfigGroup support
* Add suite add, update, and delete support
* Add Suite model and get suite(s) support
* Add get tests support

0.0.8
-----

* Add project add-update-delete example
* Add get test support
* Add project POST support
* Add milestone POST support

0.0.7
-----

* Update README.rst
* Replace \`client\_api\` with \`client.api\`
* Update Milestone object model
* Add milestones
* Fix typos and update doc strings

0.0.6
-----

* Add get templates support

0.0.5
-----

* Add statuses support
* Add case type support
* Add support for properties

0.0.4
-----

* Add User support

0.0.3
-----

* Add get\_project support and bug fixes
* Update encrypted deploy password

0.0.2
-----

* Add Client, API, and Sessions
* Add project model and tests
* Add method support for singledispatch
* Update docstrings and help() messages
* Update README copy
* Add credential setting logic
* Add API paths to constants file
* Add initial project structure
* Initial commit