@@ -7,6 +7,7 @@ from .priority import Priority
 from .project import Project
 from .result import Result
 from .run import Run
+from .section import Section
 from .status import Status
 from .suite import Suite
 from .template import Template
@@ -14,5 +15,5 @@ from .test import Test
 from .user import User
 
 __all__ = ['Case', 'CaseType', 'Config', 'ConfigGroup', 'Milestone', 'Plan',
-           'Priority', 'Project', 'Result', 'Run', 'Status', 'SubMilestone',
-           'Suite', 'Template', 'Test', 'User']
+           'Priority', 'Project', 'Result', 'Run', 'Section', 'Status',
+           'SubMilestone', 'Suite', 'Template', 'Test', 'User']
